<resources>
    <string name="app_name">Visitor Tracker</string>

    <!-- Main Menù -->
    <string name="select_activity">Seleziona una attività:</string>
    <string name="room_counter">Room Tracker</string>
    <string name="exit_counter">Exit Tracker</string>
    <string name="tema_scuro">Tema Scuro</string>
    <string name="left_handed_mode">Modalità mancino</string>
    <string name="default_directory">Salva in Downloads</string>
    <string name="english_acronym">EN</string>

    <!-- FaceMessages -->
    <string name="RW_permissions">NON HO I PERMESSI PER LEGGERE/SCRIVERE!!</string>
    <string name="no_del">Nessuna operazione da annullare</string>
    <string name="unable_create_file">Non sono stato in grado di creare il file</string>
    <string name="unable_write_file">Non sono stato in grado di aggiornare il file</string>
    <string name="unable_select_file">Non sono stato in grado di selezionare il file</string>
    <string name="version">version-</string>
    <string name="set_save_dir">Salvataggio in </string>

    <!-- Popup -->
    <string name="popup_intro">Al fine di contare i visitatori, selezionare la propria stanza dal menu` a tendina e utilizzare i bottoni `+1` e `-1` per aggiornare il numero di occupanti.\nIl bottone in basso permette di cancellare gli ultimi comandi impartiti.</string>
    <string name="popup_footer">Developed by Elia Onofri\nIAC - CNR</string>
    <string name="popup_fine">I dati sono salvati nella cartella:</string>
    <string name="popup_directory">Android/data/com.cnr.visitortracker/files/</string>
    <!-- <string name="popup_directory">Android/com.cnr.visitortracker/</string> -->

    <!-- Room counter Page -->
    <string name="counter_click_tag">Conteggio Click:</string>
    <string name="counter_people_tag">Bilancio persone:</string>
    <string name="cancel_tag">Annulla ultima azione</string>
    <string name="add_tag">+1</string>
    <string name="info_tag">I</string>
    <string name="sub_tag">-1</string>
    <string name="select">Seleziona una stanza</string>
    <string name="default_version_number">version-0.0.0</string>

    <!-- Exit counter Page -->
    <string name="blue">BLU</string>
    <string name="yellow">GIALLO</string>
    <string name="fuchsia">FUCSIA</string>
    <string name="green">VERDE</string>
    <string name="purple">VIOLA</string>
    <string name="grey">\?\?\?\?</string>


    <string-array name="rooms">
        <item>00_Ingresso</item>
        <item>01_Paolina</item>
        <item>02_David</item>
        <item>03_Apollo</item>
        <item>04_Ratto</item>
        <item>05_Portico</item>
        <item>06_Enea</item>
        <item>07_Satiro</item>
        <item>08_Caravaggio</item>
        <item>09_Pinacoteca</item>
        <item>10_Uscita</item>
        <item>90_Extra</item>
        <item>91_Extra</item>
        <item>92_Extra</item>
        <item>93_Extra</item>
        <item>94_Extra</item>
    </string-array>
</resources>